--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
       <h1>Settings</h1>
       <label for="birdSkinSelect">Bird Skin:</label>
       <select id="birdSkinSelect" onchange="changeBirdSkin(this.value)">
-        <option value="bird_red.png">Default Bird</option>
-        <option value="bird_green.png">Green Bird</option>
-        <option value="bird_blue.png">Blue Bird</option>
+        <option value="redBird.png">Default Bird</option>
+        <option value="greenBird.png">Green Bird</option>
+        <option value="blueBird.png">Blue Bird</option>
       </select>
       <label for="backgroundSelect">Background Theme:</label>
       <select id="backgroundSelect" onchange="changeBackgroundTheme(this.value)">
